[gd_scene load_steps=6 format=3 uid="uid://2x0dpek4r3k8"]

[ext_resource type="Texture2D" uid="uid://c2q8saebbvrdy" path="res://assets/options.png" id="1_c2u1v"]
[ext_resource type="Script" uid="uid://b34yajxsfvcca" path="res://scripts/button_free.gd" id="1_popdt"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_sx3uy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2iy26"]
size = Vector2(232, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_popdt"]
size = Vector2(209, 64)

[node name="options" type="StaticBody2D" groups=["button_platform"]]
physics_material_override = SubResource("PhysicsMaterial_sx3uy")
script = ExtResource("1_popdt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_c2u1v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_2iy26")
one_way_collision = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Area2D" type="Area2D" parent="." groups=["button_platform"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_popdt")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
